# learnopengl

./: .gitattributes  .gitignore  .tokeignore  README.md  compile_commands.json  conanfile.txt  meson.build
.cache/clangd/index/: glad.c.7ABC3BAC04FD0C31.idx  glad.c.E287D40C89FE1F9D.idx  glad.h.A7FBF96F56C728EA.idx  glad.h.DD142CC0C2F93F74.idx  khrplatform.h.40FC9C33F01C92D6.idx  khrplatform.h.92490EB16735C03A.idx  logger.cpp.D5DA07763D5ADE11.idx  logger.hpp.0C5B89F4F0BF58B0.idx  logger.hpp.67ED8FB3BE04E73E.idx  main.cpp.026841F77E6E9ACA.idx  main.cpp.BD08063D51B4864A.idx  utils.cpp.CEA9AA58DEB95719.idx  utils.hpp.25CC0A5C1CCE49BF.idx  window.cpp.4D21A998602438E2.idx  window.hpp.1FD297B46AD98CC9.idx
include/glad/: glad.h
src/: glad.c  index_buffer.cpp  index_buffer.hpp  logger.cpp  logger.hpp  main.cpp  program.cpp  program.hpp  utils.cpp  utils.hpp  vbo.cpp  vbo.hpp  window.cpp  window.hpp
